-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.0 Beta 1
-
edacfd2f0b6f95430b62296853c3ae5b3405b406
Grid lines are not drawn in the right color when in dark mode. Currently this seems to be hardcoded to the Mid color in the palette (as this is the case for all styles) so the QMacStyle needs to account for this via the SH_GridLineColor.
- is duplicated by
-
QTBUG-71102 Account for dark mode when drawing the table's grid lines
-
- Closed
-